--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,8 @@ p {
     border: dashed 0.5pt #c1bdbd;
     background-color: #f4f8fd;
     box-shadow: 0 1px 6px rgb(0 0 0 / 12%), 0 1px 4px rgb(0 0 0 / 24%);
+    padding: 2%;
+    margin: 1%;
 }
 
 #seccionidiomas table {
@@ -38,4 +40,37 @@ p {
 
 section h2 {
     color: #0a52b6;
+}
+
+#seccioncontactenos {
+    display: grid;
+    grid-template-areas: 
+    "contactenos contactenos contactenos contactenos"
+    "datos datos ubicacion ubicacion"
+    "form form map map";
+}
+
+#seccioncontactenos h2 {
+    grid-area: contactenos;
+}
+
+#seccioncontactenos #datos {
+    grid-area: datos;
+}
+
+#seccioncontactenos #ubicacion {
+    grid-area: ubicacion;
+}
+
+#seccioncontactenos #form {
+    grid-area: form;
+}
+
+#seccioncontactenos #map {
+    grid-area: map;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
 }
