--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,6 @@ p {
     background-color: #f4f8fd;
     box-shadow: 0 1px 6px rgb(0 0 0 / 12%), 0 1px 4px rgb(0 0 0 / 24%);
     padding: 2%;
-    margin: 1%;
 }
 
 #seccionidiomas table {
@@ -74,3 +73,69 @@ nav ul {
     display: flex;
     justify-content: space-around;
 }
+
+img {
+    max-width: 100%;
+}
+
+body {
+    display: grid;
+    grid-template-areas: 
+    "header header header"
+    "nav nav nav"
+    "datos datos redes"
+    "habilidades idiomas transversal"
+    "galeria contacto contacto"
+    "foot foot foot";
+    padding: 0 10%;
+    gap: 0.5rem;
+}
+
+header {
+    grid-area: header;
+}
+
+nav {
+    grid-area: nav;
+}
+
+#secciondatos {
+    grid-area: datos;
+}
+
+#seccionredes {
+    grid-area: redes;
+}
+
+#seccionhabilidades {
+    grid-area: habilidades;
+}
+
+#seccionidiomas {
+    grid-area: idiomas;
+}
+
+#secciontransversales {
+    grid-area: transversal;
+}
+
+#secciongaleria {
+    grid-area: galeria;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-bottom: 2%;
+}
+
+#seccioncontactenos {
+    grid-area: contacto;
+}
+
+footer {
+    grid-area: foot;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
