--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,6 +41,10 @@ section h2 {
     color: #0a52b6;
 }
 
+aside h2 {
+    color: #0a52b6;
+}
+
 #seccioncontactenos {
     display: grid;
     grid-template-areas: 
